tests/derives.stderr
error[E0599]: no method named `clone` found for enum `ExampleStructFieldKey` in the current scope
  --> tests/derives.rs:19:17
   |
 6 | #[derive(Fields, FieldKeys)]
   |                  --------- method `clone` not found for this enum
...
19 |     let _ = key.clone();
   |                 ^^^^^ method not found in `ExampleStructFieldKey`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `clone`, perhaps you need to implement it:
           candidate #1: `Clone`

error[E0599]: no method named `clone` found for enum `ExampleStructField` in the current scope
  --> tests/derives.rs:20:19
   |
 6 | #[derive(Fields, FieldKeys)]
   |          ------ method `clone` not found for this enum
...
20 |     let _ = field.clone();
   |                   ^^^^^ method not found in `ExampleStructField`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `clone`, perhaps you need to implement it:
           candidate #1: `Clone`
